--- a/a/a001.ipynb
+++ b/a/a001.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello, worid\n"
+      "hello, world\n"
      ]
     }
    ],
